[gd_scene load_steps=10 format=2]

[ext_resource path="res://API/Handlers/TileLayoutHandler.gd" type="Script" id=1]
[ext_resource path="res://API/Handlers/TileHandler.gd" type="Script" id=2]
[ext_resource path="res://API/Handlers/ChunkHandler.gd" type="Script" id=3]
[ext_resource path="res://API/Handlers/ObjectLayoutHandler.gd" type="Script" id=4]
[ext_resource path="res://API/BG.gd" type="Script" id=5]
[ext_resource path="res://API/Handlers/BlockHandler.gd" type="Script" id=6]
[ext_resource path="res://API/FG.gd" type="Script" id=7]
[ext_resource path="res://Level.gd" type="Script" id=8]

[sub_resource type="TileSet" id=6]

[node name="Level" type="Node"]
script = ExtResource( 8 )

[node name="BlockHandler" type="Node" parent="."]
script = ExtResource( 6 )

[node name="TileHandler" type="Node" parent="BlockHandler"]
script = ExtResource( 2 )

[node name="FG" type="TileMap" parent="BlockHandler/TileHandler"]
cell_size = Vector2( 8, 8 )
cell_quadrant_size = 32
format = 1

[node name="BG" type="TileMap" parent="BlockHandler/TileHandler"]
tile_set = SubResource( 6 )
cell_size = Vector2( 8, 8 )
cell_quadrant_size = 32
format = 1

[node name="ChunkHandler" type="Node" parent="."]
script = ExtResource( 3 )

[node name="TileLayoutHandler" type="Node" parent="."]
script = ExtResource( 1 )

[node name="ObjectLayoutHandler" type="Node" parent="."]
script = ExtResource( 4 )

[node name="FG" type="Node" parent="."]
script = ExtResource( 7 )

[node name="BG" type="Node" parent="."]
script = ExtResource( 5 )
